--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,26 +1,24 @@
-name: NodeJS with Webpack
+name: NodeJS CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
-    runs-on: selft-hosted
+    runs-on: self-hosted
 
     strategy:
       matrix:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        npm ci
-        npm run build
+      - run: npm ci
+      - run: npm run build
