--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,24 +1,30 @@
-name: NodeJS CI
+name: React CI-CD workflow
 
 on:
+  workflow_dispatch:
   push:
     branches: ["master"]
+  pull_request:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: npm ci
-      - run: npm run build
+      - name: Install
+        run: npm ci
+
+      - name: Build
+        run: npm run build
