--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,24 +8,29 @@ on:
   pull_request:
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
       - name: Install
         run: npm ci
-
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
       - name: Build
         run: npm run build
+  test:
+    needs: setup
+    runs-on: ubuntu-lastest
+    steps:
+      - name: Unit test
+        run: npm run test
