--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build
         run: npm run build
   test:
-    needs: build
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -56,3 +56,20 @@ jobs:
         run: npm ci
       - name: Unit test
         run: npm run test
+  lint:
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install
+        run: npm ci
+      - name: Linting
+        run: npm run lint
