--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,3 +73,12 @@ jobs:
         run: npm ci
       - name: Linting
         run: npm run lint
+  deploy:
+    needs: [build, lint, test]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - name: Deploy
+        run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
