--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,7 +76,7 @@ jobs:
   deploy:
     if: ${{github.event_name == 'push' && github.ref == 'refs/heads/master'}}
     needs: [build, lint, test]
-    runs-on: self-host
+    runs-on: self-hosted
     strategy:
       matrix:
         node-version: [16.x]
